# opensource-radar

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/crates/collector/: Cargo.toml
backend/crates/collector/src/: digest.rs  digest_scheduler.rs  lib.rs  notifier.rs  rate_limit.rs  scheduler.rs  token.rs
backend/crates/collector/src/adapters/: github.rs  hackernews.rs
backend/crates/collector/tests/: scheduler_integration.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: error.rs  lib.rs  models.rs  normalize.rs  notifier.rs  source.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: app.rs  config.rs  error.rs  lib.rs
backend/crates/server/src/api/: admin.rs  digest.rs  facets.rs  health.rs  mod.rs  projects.rs  snapshots.rs  sources.rs
backend/crates/server/tests/: api_integration.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs  pool.rs
backend/crates/storage/src/repo/: facets.rs  mod.rs  project.rs  raw.rs  snapshot.rs
backend/crates/storage/tests/: repo_integration.rs
backend/migrations/: 0001_init.sql
docs/superpowers/specs/: 2026-07-11-digest-push-design.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FilterBar.tsx  MetricSparkline.tsx  Pagination.tsx  RankingTable.tsx  SourceBadge.tsx  SourceFreshness.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: HomePage.tsx  ProjectDetailPage.tsx
