[package]
name = "collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
sqlx = { workspace = true }
