[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openradar"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }

[dependencies]
domain = { workspace = true }
storage = { workspace = true }
collector = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
