[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
